--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "Angular JWT Todo API Server",
     "main": "app.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node app.js",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "nodemon app.js"
     },
     "author": "Sebastian Schocke",
     "license": "ISC",
@@ -14,6 +16,13 @@
         "express-jwt": "^5.3.1",
         "jsonwebtoken": "^8.3.0",
         "lodash": "^4.17.4",
-        "cors": "^2.8.4"
+        "cors": "^2.8.4",
+        "mongoose": "^5.1.0",
+        "multer": "^1.3.0",
+        "ejs": "^2.6.1"
+    },
+    "devDependencies": {
+        "faker": "^4.1.0",
+        "nodemon": "^1.17.4"
     }
 }
