--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "author": "Sebastian Schocke",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.18.3",
+        "cors": "^2.8.4",
+        "ejs": "^2.6.1",
         "express": "^4.15.3",
         "express-jwt": "^5.3.1",
         "jsonwebtoken": "^8.3.0",
         "lodash": "^4.17.4",
-        "cors": "^2.8.4",
         "mongoose": "^5.1.0",
-        "multer": "^1.3.0",
-        "ejs": "^2.6.1"
+        "multer": "^1.3.0"
     },
     "devDependencies": {
         "faker": "^4.1.0",
