--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "nodemon app.js"
     },
-    "author": "Sebastian Schocke",
+    "author": "Fayçal Jebali",
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
@@ -17,10 +17,12 @@
         "ejs": "^2.7.4",
         "express": "^4.17.1",
         "express-jwt": "^5.3.3",
+        "jshint": "^2.12.0",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.19",
         "mongoose": "^5.9.28",
-        "multer": "^1.4.2"
+        "multer": "^1.4.2",
+        "swagger-jsdoc": "^6.0.0-rc.5"
     },
     "devDependencies": {
         "faker": "^4.1.0",
